<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wchung.databaseexample.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:id="@+id/fname_value"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/first"
            android:layout_toEndOf="@+id/first" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/last"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignBaseline="@+id/fname_value"
            android:layout_alignBottom="@+id/fname_value"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:id="@+id/lname_value"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/first"
            android:layout_toEndOf="@+id/first" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_weight="1"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:id="@+id/email_value"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/first"
            android:layout_toEndOf="@+id/first" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_button"
            android:layout_weight="1" />

        <Button
            android:text="@string/query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/query_button"
            android:layout_weight="1" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list" />

</LinearLayout>
